fixat text align på services och trusted

--- a/UmbracoCMS/wwwroot/css/scss/homePage/_homePage.scss
+++ b/UmbracoCMS/wwwroot/css/scss/homePage/_homePage.scss
@@ -243,24 +243,43 @@
         background-color: #F7F7F7;
         height: 100vh;
 
-        .our-services-content {           
+        .our-services-content {
             font-family: "Poppins", sans-serif;
             color: #4F5955;
             font-size: 16px;
-            margin-left: 35rem;
-            margin-top: 5rem;
+            padding-top: 4rem;
 
             h5 {
                 color: #D9C3A9;
                 font-size: 14px;
                 font-weight: bold;
-                margin-left: 20rem;
+                text-align: center;
             }
 
             h2 {
-                margin-left:6rem;
                 font-size: 40px;
+                @include headings;
             }
+        }
+    }
+}
+
+.trusted {
+    .container {
+        .trusted-content {
+            h2 {
+                @include headings;
+                margin-left: 0rem;
+                text-align: center;
+            }
+
+            p {
+                @include text;
+                margin-left: 20rem;
+            }
+        }
+
+        .a {
         }
     }
 }
